@@ -1,3 +1,4 @@
+Fraction Matcher: Fixed stroke width for compound pattern shapes (for fraction > 1)
 # 0.00.79 (64772) Jun 7, 2012
 Started on "pictures" scene
 Removed package buildafraction_functional
